--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^7.0.0
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
